Bug 80897 - VIEWING: Text transformation in Text-Box lost after RT
Summary: VIEWING: Text transformation in Text-Box lost after RT
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Dinesh
URL:
Whiteboard: BSA target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-04 06:46 UTC by Dinesh
Modified: 2014-07-29 18:11 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Original File with text (17.17 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-07-04 06:46 UTC, Dinesh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dinesh 2014-07-04 06:46:08 UTC
Created attachment 102240 [details]
Original File with text

Problem description: 
File containing text transformation in text box is getting lost after RT.

Steps to reproduce:
1. Open the file in LibreOffice
2. Click File -> Save As (Microsoft Word 2007/2010 (.docx))
3. Open saved file in MS Office

Current behavior:
Text transform in text box is getting lost after RT

Expected behavior:
Text transformation should be preserved after RT
Operating System: All
Version: 4.4.0.0.alpha0+ Master
Comment 1 Commit Notification 2014-07-21 14:30:06 UTC
Rohit Deshmukh committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=acd2c90978052723475a41144dd5d92090fbf6b4

fdo#80897: Preservation of text warp properties.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.