fdo#80897: Preservation of text warp properties.

- Generic fix for all warp properties

Change-Id: I77c37759aa49706fc3cd1a80770a85face53f0a2