include/oox/export/shapes.hxx
@@ -73,6 +73,7 @@ private:
 
     ShapeHashMap maShapeMap;
     ShapeHashMap* mpShapeMap;
+    OUString m_presetWarp;
 
 public:
 
