oox/source/shape/WpsContext.cxx
@@ -127,6 +127,17 @@ oox::core::ContextHandlerRef WpsContext::onCreateContext(sal_Int32 nElementToken
         }
     }
     break;
+    case XML_prstTxWarp:
+        if( rAttribs.hasAttribute( XML_prst ) )
+        {
+            uno::Reference<beans::XPropertySet> xPropertySet(mxShape, uno::UNO_QUERY);
+            oox::OptValue<OUString> presetShapeName = rAttribs.getString( XML_prst );
+            OUString preset = presetShapeName.get();
+            comphelper::SequenceAsHashMap aCustomShapeGeometry(xPropertySet->getPropertyValue("CustomShapeGeometry"));
+            aCustomShapeGeometry["PresetTextWarp"] = uno::makeAny(preset);
+            xPropertySet->setPropertyValue("CustomShapeGeometry", uno::makeAny(aCustomShapeGeometry.getAsConstPropertyValueList()));
+        }
+        break;
     case XML_txbx:
     {
         mpShape->getCustomShapeProperties()->setShapeTypeOverride(true);
